Version 8.11.0 -> 9.1.0
-----------------------
 - using Lucene 9.1.0 sources (now built with gradle)
 - PyLucene built with JCC 3.12

Version 8.9.0 -> 8.11.0
-----------------------
 - using Lucene 8.11.0 sources
 - PyLucene built with JCC 3.11

Version 8.8.1 -> 8.9.0
----------------------
 - using Lucene 8.9.0 sources
 - PyLucene built with JCC 3.10

Version 8.6.1 -> 8.8.1
----------------------
 - using Lucene 8.8.1 sources
 - PyLucene built with JCC 3.9

Version 8.3.0 -> 8.6.1
----------------------
 - using Lucene 8.6.1 sources
 - PyLucene built with JCC 3.8

Version 8.1.1 -> 8.3.0
----------------------
 - using Lucene 8.3.0 sources
 - PyLucene built with JCC 3.7

Version 7.7.1 -> 8.1.1
----------------------
 - refreshed list of supported modules
 - using Lucene 8.1.1 sources
 - PyLucene built with JCC 3.6

Version 7.6.0 -> 7.7.1
----------------------
 - using Lucene 7.7.1 sources
 - PyLucene built with JCC 3.5

Version 7.5.0 -> 7.6.0
----------------------
 - using Lucene 7.6.0 sources
 - PyLucene built with JCC 3.4

Version 7.4.0 -> 7.5.0
----------------------
 - using Lucene 7.5.0 sources
 - PyLucene built with JCC 3.3

Version 6.5.0 -> 7.4.0
----------------------
 - using Lucene 7.4.0 sources
 - PyLucene built with JCC 3.2

Version 6.4.1 -> 6.5.0
----------------------
 - using Lucene 6.5.0 sources
 - PyLucene built with JCC 3.0
 - added support for Python 3.3+

Version 6.2.0 -> 6.4.1
----------------------
 - using Lucene 6.4.1 sources
 - added explicit wrapper for org.apache.lucene.analysis.Tokenizer:input
 - PyLucene built with JCC 2.23

Version 4.10.1 -> 6.2.0
-----------------------
 - using Lucene 6.2.0 sources
 - PyLucene built with JCC 2.22

Version 4.9.0 -> 4.10.1
-----------------------
 - using Lucene 4.10.1 sources
 - PyLucene built with JCC 2.21

Version 4.8.0 -> 4.9.0
----------------------
 - using Lucene 4.9.0 sources
 - FacetSample.py fixed to work with Lucene 4.9 facets API (Thomas Koch)
 - PyLucene built with JCC 2.20
