@@ -1,2 +1,0 @@
-
-javac.failOnWarnings = false
